<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/boarder_bg"
        android:orientation="horizontal"
        android:weightSum="7">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.75"
            android:orientation="vertical"
            android:weightSum="7.5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"></LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:background="@drawable/boarder_bg"
                >
                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:id="@+id/patientimage"
                    app:srcCompat="@drawable/women"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"></LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="@color/textcolor"
                android:typeface="monospace"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:text="@string/ID_Number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:typeface="sans"
                android:textColor="@color/red"
                android:paddingTop="20dp"
                android:gravity="center"
                android:text="11223344556"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:weightSum="4.5"
            android:layout_weight="5.1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2.1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:typeface="monospace"
                    android:textColor="@color/textcolor"
                    android:text="@string/namehint"
                    android:paddingRight="20dp"
                    android:gravity="center"
                    android:textSize="25sp"></TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:typeface="serif"
                    android:textColor="@color/textcolor"
                    android:text="Adı"
                    android:gravity="center"
                    android:textSize="30sp"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"></LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="monospace"
                        android:textColor="@color/textcolor"
                        android:text="@string/Hint_family"
                        android:paddingRight="20dp"
                        android:gravity="center"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="serif"
                        android:textColor="@color/textcolor"
                        android:text="Soyadı"
                        android:gravity="center"
                        android:textSize="30sp"></TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2.1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="monospace"
                        android:textColor="@color/textcolor"
                        android:text="Ana Adı"
                        android:paddingRight="20dp"
                        android:gravity="center"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="serif"
                        android:textColor="@color/textcolor"
                        android:text="Ana Adı"
                        android:gravity="center"
                        android:textSize="30sp"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"></LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="monospace"
                        android:textColor="@color/textcolor"
                        android:text="@string/FatherName"
                        android:paddingRight="20dp"
                        android:gravity="center"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="serif"
                        android:textColor="@color/textcolor"
                        android:text="Baba Adı"
                        android:gravity="center"
                        android:textSize="30sp"></TextView>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2.1">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="monospace"
                        android:textColor="@color/textcolor"
                        android:text="@string/DateOfBırth"
                        android:paddingRight="20dp"
                        android:gravity="center"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="serif"
                        android:textColor="@color/textcolor"
                        android:text="1989.01.01"
                        android:gravity="center"
                        android:textSize="30sp"></TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.1"></LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="monospace"
                        android:textColor="@color/textcolor"
                        android:text="@string/BirthYear"
                        android:paddingRight="20dp"
                        android:gravity="center"
                        android:textSize="25sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:typeface="serif"
                        android:textColor="@color/textcolor"
                        android:text="22"
                        android:gravity="center"
                        android:textSize="30sp"></TextView>
                </LinearLayout>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5">
                <RelativeLayout
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_search">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="40sp"
                        android:text="@string/MoreInformation"
                        android:textColor="@color/whıte"
                        android:id="@+id/btnfazla"/>
                </RelativeLayout>
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>